- add strings in strings file for some xml files

--- a/app/src/main/res/layout-w720dp-land/activity_add_form.xml
+++ b/app/src/main/res/layout-w720dp-land/activity_add_form.xml
@@ -39,10 +39,11 @@
                 android:layout_marginRight="7dp"
                 android:layout_weight="50"
                 android:backgroundTint="@color/blue_grey_dark"
-                android:text="Type of place"
+                android:text="@string/button_generic_text_type_of_place"
                 android:textSize="16sp"
                 android:textAllCaps="false"
-                app:icon="@drawable/house" />
+                app:icon="@drawable/house"
+                android:layout_marginEnd="7dp" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/button_add_pictures"
@@ -53,9 +54,10 @@
                 android:layout_weight="50"
                 android:textSize="16sp"
                 android:backgroundTint="@color/blue_grey_dark"
-                android:text="Add pictures"
+                android:text="@string/button_add_pictures"
                 android:textAllCaps="false"
-                app:icon="@drawable/picture" />
+                app:icon="@drawable/picture"
+                android:layout_marginStart="7dp" />
 
         </LinearLayout>
 
@@ -75,7 +77,8 @@
                 android:layout_height="30dp"
                 android:layout_marginTop="15dp"
                 android:layout_marginRight="10dp"
-                android:src="@drawable/price_tag" />
+                android:src="@drawable/price_tag"
+                android:layout_marginEnd="10dp" />
 
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
@@ -90,7 +93,8 @@
                     android:id="@+id/text_edit_price"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Price (dollars)"
+                    android:hint="@string/price_hint"
+                    android:singleLine="true"
                     android:inputType="number"
                     android:maxLines="1"
                     android:textSize="14sp"
@@ -111,7 +115,8 @@
                 android:layout_height="30dp"
                 android:layout_marginTop="15dp"
                 android:layout_marginRight="10dp"
-                android:src="@drawable/ic_surface" />
+                android:src="@drawable/ic_surface"
+                android:layout_marginEnd="10dp" />
 
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
@@ -126,7 +131,8 @@
                     android:id="@+id/text_edit_surface"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Surface (m²)"
+                    android:hint="@string/surface_hint"
+                    android:singleLine="true"
                     android:inputType="number"
                     android:maxLines="1"
                     android:textSize="14sp"
@@ -147,7 +153,8 @@
                 android:layout_height="30dp"
                 android:layout_marginTop="15dp"
                 android:layout_marginRight="10dp"
-                android:src="@drawable/number_of_room" />
+                android:src="@drawable/number_of_room"
+                android:layout_marginEnd="10dp" />
 
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
@@ -162,7 +169,8 @@
                     android:id="@+id/text_edit_nbr_of_rooms"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Number of rooms"
+                    android:hint="@string/number_of_rooms_hint"
+                    android:singleLine="true"
                     android:inputType="number"
                     android:maxLines="1"
                     android:textSize="14sp"
@@ -177,13 +185,15 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="40dp"
             app:boxStrokeColor="@color/blue"
-            app:errorEnabled="true">
+            app:errorEnabled="true"
+            android:layout_marginStart="40dp">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/text_edit_nbr_of_bedrooms"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Number of bedrooms"
+                android:hint="@string/nbr_of_bedrooms_hint"
+                android:singleLine="true"
                 android:inputType="number"
                 android:maxLines="1"
                 android:textSize="14sp"
@@ -197,13 +207,15 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="40dp"
             app:boxStrokeColor="@color/blue"
-            app:errorEnabled="true">
+            app:errorEnabled="true"
+            android:layout_marginStart="40dp">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/text_edit_nbr_of_bathrooms"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Number of bathrooms"
+                android:hint="@string/nbr_of_bathrooms_hint"
+                android:singleLine="true"
                 android:inputType="number"
                 android:maxLines="1"
                 android:textSize="14sp"
@@ -222,7 +234,8 @@
                 android:layout_height="30dp"
                 android:layout_marginTop="15dp"
                 android:layout_marginRight="10dp"
-                android:src="@drawable/edit" />
+                android:src="@drawable/edit"
+                android:layout_marginEnd="10dp" />
 
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
@@ -236,7 +249,8 @@
                     android:id="@+id/text_edit_description"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Description"
+                    android:hint="@string/description_hint"
+                    android:inputType="textCapSentences"
                     android:textSize="14sp"
                     app:hintEnabled="true" />
 
@@ -255,7 +269,8 @@
                 android:layout_height="30dp"
                 android:layout_marginTop="15dp"
                 android:layout_marginRight="10dp"
-                android:src="@drawable/address" />
+                android:src="@drawable/address"
+                android:layout_marginEnd="10dp" />
 
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
@@ -269,7 +284,8 @@
                     android:id="@+id/text_edit_street_nbr"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Number"
+                    android:hint="@string/street_nbr_hint"
+                    android:singleLine="true"
                     android:inputType="number"
                     android:maxLines="1"
                     android:textSize="14sp"
@@ -284,13 +300,16 @@
                 android:layout_marginLeft="10dp"
                 android:layout_weight="80"
                 app:boxStrokeColor="@color/blue"
-                app:errorEnabled="true">
+                app:errorEnabled="true"
+                android:layout_marginStart="10dp">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/edit_text_street_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Street name"
+                    android:hint="@string/street_name_hint"
+                    android:singleLine="true"
+                    android:inputType="textCapSentences"
                     android:maxLines="1"
                     android:textSize="14sp"
                     app:hintEnabled="true" />
@@ -310,13 +329,16 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="40dp"
                 app:boxStrokeColor="@color/blue"
-                app:errorEnabled="true">
+                app:errorEnabled="true"
+                android:layout_marginStart="40dp">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/edit_text_complement"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Complement"
+                    android:hint="@string/complement_hint"
+                    android:singleLine="true"
+                    android:inputType="textCapSentences"
                     android:maxLines="1"
                     android:textSize="14sp"
                     app:hintEnabled="true" />
@@ -337,13 +359,15 @@
                 android:layout_marginLeft="40dp"
                 android:layout_weight="50"
                 app:boxStrokeColor="@color/blue"
-                app:errorEnabled="true">
+                app:errorEnabled="true"
+                android:layout_marginStart="40dp">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/text_edit_postal_code"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Postal code"
+                    android:hint="@string/postal_code_hint"
+                    android:singleLine="true"
                     android:inputType="number"
                     android:maxLines="1"
                     android:textSize="14sp"
@@ -358,13 +382,16 @@
                 android:layout_marginLeft="10dp"
                 android:layout_weight="50"
                 app:boxStrokeColor="@color/blue"
-                app:errorEnabled="true">
+                app:errorEnabled="true"
+                android:layout_marginStart="10dp">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/text_edit_city"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="City"
+                    android:hint="@string/city_hint"
+                    android:singleLine="true"
+                    android:inputType="textCapSentences"
                     android:maxLines="1"
                     android:textSize="14sp"
                     app:hintEnabled="true" />
@@ -384,13 +411,16 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="40dp"
                 app:boxStrokeColor="@color/blue"
-                app:errorEnabled="true">
+                app:errorEnabled="true"
+                android:layout_marginStart="40dp">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/text_edit_country"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Country"
+                    android:hint="@string/country_hint"
+                    android:singleLine="true"
+                    android:inputType="textCapSentences"
                     android:maxLines="1"
                     android:textSize="14sp"
                     app:hintEnabled="true" />
@@ -410,7 +440,8 @@
                 android:layout_height="30dp"
                 android:layout_marginTop="15dp"
                 android:layout_marginRight="10dp"
-                android:src="@drawable/user" />
+                android:src="@drawable/user"
+                android:layout_marginEnd="10dp" />
 
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
@@ -423,7 +454,9 @@
                     android:id="@+id/text_edit_author"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Real estate agent"
+                    android:hint="@string/real_estate_agent_hint"
+                    android:singleLine="true"
+                    android:inputType="textCapSentences"
                     android:maxLines="1"
                     android:textSize="14sp"
                     app:hintEnabled="true" />
@@ -458,7 +491,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Date of sale: " />
+                android:text="@string/date_of_sale_text_view_text" />
 
             <Button
                 android:id="@+id/spinner_button_sale_date"
