--- a/app/src/main/res/layout-w720dp-land/activity_search.xml
+++ b/app/src/main/res/layout-w720dp-land/activity_search.xml
@@ -84,6 +84,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:inputType="number"
+                        android:singleLine="true"
                         android:textSize="12sp"/>
 
                 </com.google.android.material.textfield.TextInputLayout>
@@ -99,6 +100,7 @@
                         android:layout_height="wrap_content"
                         android:id="@+id/text_edit_max_price_search_activity"
                         android:inputType="number"
+                        android:singleLine="true"
                         android:textSize="12sp"/>
 
                 </com.google.android.material.textfield.TextInputLayout>
@@ -136,6 +138,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:inputType="number"
+                        android:singleLine="true"
                         android:textSize="12sp"/>
 
                 </com.google.android.material.textfield.TextInputLayout>
@@ -151,6 +154,7 @@
                         android:layout_height="wrap_content"
                         android:id="@+id/text_edit_max_surface_search_activity"
                         android:inputType="number"
+                        android:singleLine="true"
                         android:textSize="12sp"/>
 
                 </com.google.android.material.textfield.TextInputLayout>
@@ -188,6 +192,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:inputType="number"
+                        android:singleLine="true"
                         android:textSize="12sp"/>
 
                 </com.google.android.material.textfield.TextInputLayout>
@@ -203,6 +208,7 @@
                         android:layout_height="wrap_content"
                         android:id="@+id/text_edit_max_nbr_rooms_search_activity"
                         android:inputType="number"
+                        android:singleLine="true"
                         android:textSize="12sp"/>
 
                 </com.google.android.material.textfield.TextInputLayout>
@@ -241,6 +247,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:inputType="number"
+                        android:singleLine="true"
                         android:textSize="12sp"/>
 
                 </com.google.android.material.textfield.TextInputLayout>
@@ -256,6 +263,7 @@
                         android:layout_height="wrap_content"
                         android:id="@+id/text_edit_max_nbr_bedrooms_search_activity"
                         android:inputType="number"
+                        android:singleLine="true"
                         android:textSize="12sp"/>
 
                 </com.google.android.material.textfield.TextInputLayout>
@@ -293,6 +301,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:inputType="number"
+                        android:singleLine="true"
                         android:textSize="12sp"/>
 
                 </com.google.android.material.textfield.TextInputLayout>
@@ -308,6 +317,7 @@
                         android:layout_height="wrap_content"
                         android:id="@+id/text_edit_max_nbr_bathrooms_search_activity"
                         android:inputType="number"
+                        android:singleLine="true"
                         android:textSize="12sp"/>
 
                 </com.google.android.material.textfield.TextInputLayout>
@@ -345,6 +355,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:inputType="number"
+                        android:singleLine="true"
                         android:textSize="12sp"/>
 
                 </com.google.android.material.textfield.TextInputLayout>
@@ -381,7 +392,9 @@
                         android:id="@+id/text_edit_city_search_activity"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:inputType="textCapSentences"
                         android:maxLines="1"
+                        android:singleLine="true"
                         android:textSize="12sp"/>
 
                 </com.google.android.material.textfield.TextInputLayout>
