--- a/app/src/main/res/layout/dialog_add_description.xml
+++ b/app/src/main/res/layout/dialog_add_description.xml
@@ -18,8 +18,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:hintEnabled="true"
-            android:inputType="text"
+            android:inputType="text|textCapSentences"
             android:textSize="12sp"
+            android:singleLine="true"
             android:hint="Type description here..."/>
     </com.google.android.material.textfield.TextInputLayout>
 </LinearLayout>
